# slither-io-for-linux

./: AndroidManifest.xml  README.md  classes2.dex  pyproject.toml  resources.arsc  setup.py
assets/dexopt/: baseline.prof  baseline.profm
output_scripts/scripts/: bg_asanoha.as  bg_bluecube.as  bg_circuits.as  bg_circuits2.as  bg_graygrid.as  bg_hearts.as  bg_hexB.as  bg_hexice.as  bg_kitties.as  bg_leaves.as  bg_paint.as  bg_purplecube.as  bg_redcube.as  bg_rizz.as  bg_seigaiha.as  bg_snakey.as  bg_stainedglass.as  bg_usastar.as  bgee2.as  bgee_classic.as  boost_wav.as  button_pop_wav.as  fg_bluecube.as  fg_purplecube.as  fg_redcube.as  gs_old.as  menu_intro_wav.as  menu_wav.as  sheet0_a_png.as  sheet0_b_png.as  sheet0_c_png.as  sheet0_d_png.as  sheet0_e_png.as  sheet0_f_png.as  sheet0_g_png.as  sheet1_a_png.as  sheet1_b_png.as  sheet1_c_png.as  sheet1_d_png.as  sheet1_e_png.as  (+13 more)
output_scripts/scripts/gaim/: Char.as  Finger.as  Food.as  FoodDeadpool.as  Gaim.as  GameTextureContainer.as  Main.as  PerColor.as  PrevSnakeData.as  Prey.as  Segment.as  SkinSegmentData.as  SkinSegmentDataDeadpool.as  Snake.as  (+4 more)
res/: -8.xml  01.xml  16.xml  1V.xml  2r.xml  3F.xml  47.xml  4z.xml  5z.xml  9m.xml  AE.xml  Ax.xml  BJ.xml  Bl.xml  Bz.xml  EQ.xml  Eb.xml  Gs.xml  JS.xml  K-.xml  LQ.xml  Lr.xml  O4.xml  Pb.xml  Ql.xml  Rt.xml  S8.xml  SN.xml  Sc.xml  Sh.xml  T5.xml  TK.xml  Ws.xml  YM.xml  ZP.xml  _v.xml  _y.xml  a0.xml  c6.xml  cV.xml  (+18 more)
res/color/: common_google_signin_btn_text_dark.xml  common_google_signin_btn_text_light.xml
slither_io/: main.py  main_tkinter.py  network.py
(+113 files in other folders)
